force-app/main/default/objects/Stock_Transfer__c/Stock_Transfer__c.object-meta.xml
<CustomObject>
    <label>Stock Transfer</label>
    <pluralLabel>Stock Transfers</pluralLabel>
    <nameField>
        <label>Transfer Number</label>
        <displayFormat>TRF-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Inter-warehouse stock transfer tracking for FMCG distribution management</description>
</CustomObject>