force-app/main/default/objects/Stock_Transfer__c/fields/Destination_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Destination_Warehouse__c</fullName>
    <label>Destination Warehouse</label>
    <type>Lookup</type>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Inbound Transfers</relationshipLabel>
    <relationshipName>Inbound_Transfers</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>