force-app/main/default/objects/Stock_Transfer__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <label>Requested By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Requested Transfers</relationshipLabel>
    <relationshipName>Requested_Transfers</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>