force-app/main/default/objects/Stock_Transfer__c/fields/Source_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Source_Warehouse__c</fullName>
    <label>Source Warehouse</label>
    <type>Lookup</type>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Outbound Transfers</relationshipLabel>
    <relationshipName>Outbound_Transfers</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>