force-app/main/default/objects/Stock_Transfer__c/validationRules/Source_Not_Equal_Destination.validationRule-meta.xml
<ValidationRule>
    <fullName>Source_Not_Equal_Destination</fullName>
    <active>true</active>
    <errorConditionFormula>Source_Warehouse__c = Destination_Warehouse__c</errorConditionFormula>
    <errorMessage>Source and destination warehouses must be different.</errorMessage>
</ValidationRule>