force-app/main/default/objects/Stock_Transfer__c/listViews/All_Transfers.listView-meta.xml
<ListView>
    <fullName>All_Transfers</fullName>
    <label>All Transfers</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Source_Warehouse__c</columns>
    <columns>Destination_Warehouse__c</columns>
    <columns>Transfer_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Requested_By__c</columns>
</ListView>