force-app/main/default/objects/Stock_Transfer__c/listViews/Pending_Transfers.listView-meta.xml
<ListView>
    <fullName>Pending_Transfers</fullName>
    <label>Pending Transfers</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Source_Warehouse__c</columns>
    <columns>Destination_Warehouse__c</columns>
    <columns>Transfer_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Requested_By__c</columns>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
</ListView>